--- a/MultiDirectionCollectionView/da.lproj/Hint.strings
+++ b/MultiDirectionCollectionView/da.lproj/Hint.strings
@@ -42,7 +42,7 @@
 "lKn-Uh-Xdf.text" = "=e^(5)";
 
 /* Class = "UILabel"; text = "dog:cat:raccoon →"; ObjectID = "ucd-dI-lW7"; */
-"ucd-dI-lW7.text" = "Hund:Kat:Ko→";
+"ucd-dI-lW7.text" = "Hund:Kat:Ko→ *Dette udfylder 3 celler i træk.";
 
 /* Class = "UILabel"; text = "=IMSUM(A3,A4)"; ObjectID = "vCQ-3w-Afp"; */
 "vCQ-3w-Afp.text" = "=IMSUM(A3,A4)";
