--- a/MultiDirectionCollectionView/de.lproj/Hint.strings
+++ b/MultiDirectionCollectionView/de.lproj/Hint.strings
@@ -42,7 +42,7 @@
 "lKn-Uh-Xdf.text" = "=e^(5)";
 
 /* Class = "UILabel"; text = "dog:cat:raccoon →"; ObjectID = "ucd-dI-lW7"; */
-"ucd-dI-lW7.text" = "Hund:Katze:Kuh→";
+"ucd-dI-lW7.text" = "Hund:Katze:Kuh→ *Dadurch werden 3 Zellen hintereinander gefüllt.";
 
 /* Class = "UILabel"; text = "=IMSUM(A3,A4)"; ObjectID = "vCQ-3w-Afp"; */
 "vCQ-3w-Afp.text" = "=IMSUM(A3,A4)";
